--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,44 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
+apptools==5.1.0
+async-timeout==4.0.1
+attrs==21.2.0
+autopep8==1.6.0
+charset-normalizer==2.0.9
+configobj==5.0.6
+cycler==0.11.0
+envisage==6.0.1
+frozenlist==1.2.0
+idna==3.3
+imageio==2.13.3
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+kiwisolver==1.3.2
+matplotlib==3.4.3
+mayavi==4.7.4
+multidict==5.2.0
+networkx==2.6.3
 numpy==1.21.3
-scipy==1.7.1
+packaging==21.3
+Pillow==8.4.0
+pycodestyle==2.8.0
+pyface==7.3.0
+Pygments==2.10.0
+pyparsing==3.0.4
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+python-dateutil==2.8.2
+PyWavelets==1.2.0
+scikit-image==0.19.0
+scipy==1.7.3
+six==1.16.0
+tifffile==2021.11.2
+toml==0.10.2
+traits==6.3.2
+traitsui==7.2.1
+typing-extensions==4.0.1
+vtk==9.1.0
+wslink==1.2.1
+yarl==1.7.2
+zipp==3.6.0
