--- a/task3/config.ini
+++ b/task3/config.ini
@@ -5,8 +5,11 @@ L_z=1.0
 N_x=128
 N_y=128
 N_z=128
+periodic_x=true
+periodic_y=true
+periodic_z=true
 K=20
-T=0.005
+T=0.025
 save_layers=false
 save_step=5
 layers_path=./layers/
