Remove unused sends in case of type 0 boundary

--- a/task3/config.ini
+++ b/task3/config.ini
@@ -10,7 +10,7 @@ periodic_y=true
 periodic_z=true
 K=20
 T=0.025
-print_layer_err=false
+print_layer_err=true
 save_layers=false
 save_step=5
 layers_path=./layers/
